--- a/test.ini
+++ b/test.ini
@@ -14,6 +14,10 @@ use = config:../ckan/test-core.ini
 # Insert any custom config settings to be used when running your extension's
 # tests here.
 
+ckan.legacy_templates = false
+ckan.plugins = needupdate
+
+solr_url = http://127.0.0.1:8983/solr/ckan
 
 # Logging configuration
 [loggers]
