--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -9,9 +9,7 @@ engines:
   	enabled: true
     config:
     	languages:
-      - ruby
-      	#mass_threshold: 30
-      - javascript
+      - python
 ratings:
   paths:
   - app/**
